--- a/modules/welcome/views/welcome.twig
+++ b/modules/welcome/views/welcome.twig
@@ -1,108 +1,59 @@
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Welcome to CodeIgniter</title>
+{% extends 'layouts/app.twig' %}
 
-    <style type="text/css">
-      ::selection {
-        background-color: #e13300;
-        color: white;
-      }
-      ::-moz-selection {
-        background-color: #e13300;
-        color: white;
-      }
+{% block title %}
+Welcome
+{% endblock %}
 
-      body {
-        background-color: #fff;
-        margin: 40px;
-        font: 13px/20px normal Helvetica, Arial, sans-serif;
-        color: #4f5155;
-      }
-
-      a {
-        color: #003399;
-        background-color: transparent;
-        font-weight: normal;
-        text-decoration: none;
-      }
-
-      a:hover {
-        color: #97310e;
-      }
-
-      h1 {
-        color: #444;
-        background-color: transparent;
-        border-bottom: 1px solid #d0d0d0;
-        font-size: 19px;
-        font-weight: normal;
-        margin: 0 0 14px 0;
-        padding: 14px 15px 10px 15px;
-      }
-
-      code {
-        font-family: Consolas, Monaco, Courier New, Courier, monospace;
-        font-size: 12px;
-        background-color: #f9f9f9;
-        border: 1px solid #d0d0d0;
-        color: #002166;
-        display: block;
-        margin: 14px 0 14px 0;
-        padding: 12px 10px 12px 10px;
-      }
-
-      #body {
-        margin: 0 15px 0 15px;
-        min-height: 96px;
-      }
-
-      p {
-        margin: 0 0 10px;
-        padding: 0;
-      }
-
-      p.footer {
-        text-align: right;
-        font-size: 11px;
-        border-top: 1px solid #d0d0d0;
-        line-height: 32px;
-        padding: 0 10px 0 10px;
-        margin: 20px 0 0 0;
-      }
-
-      #container {
-        margin: 10px;
-        border: 1px solid #d0d0d0;
-        box-shadow: 0 0 8px #d0d0d0;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="container">
-      <h1>Welcome to CodeIgniter!</h1>
-
-      <div id="body">
-        <p>
-          The page you are looking at is being generated dynamically by
-          CodeIgniter.
-        </p>
-
-        <p>If you would like to edit this page you'll find it located at:</p>
-        <code>modules/welcome/views/welcome.twig</code>
-
-        <p>The corresponding controller for this page is found at:</p>
-        <code>modules/welcome/controllers/Welcome.php</code>
-
-        <p>
-          If you are exploring CodeIgniter for the very first time, you should
-          start by reading the <a href="//codeigniter.com/userguide3/">User Guide</a>.
-        </p>
-      </div>
-
-      <p class="footer">
-        Page rendered in <strong>{elapsed_time}</strong> seconds.
-      </p>
+{% block header %}
+<div class="row align-items-center">
+  <div class="col">
+    <div class="page-pretitle">
+      <ol class="breadcrumb breadcrumb-arrows" aria-label="breadcrumbs">
+        <li class="breadcrumb-item"><a href="/">Home</a></li>
+        <li class="breadcrumb-item"><a href="/welcome">Welcome</a></li>
+      </ol>
     </div>
-  </body>
-</html>
+    <h2 class="page-title">
+      Welcome
+    </h2>
+  </div>
+  <div class="col-auto ms-auto d-print-none">
+    <div class="btn-list">
+      <a href="#" class="btn btn-primary d-none d-sm-inline-block">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2"
+          stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <line x1="12" y1="5" x2="12" y2="19"></line>
+          <line x1="5" y1="12" x2="19" y2="12"></line>
+        </svg>
+        Create Data
+      </a>
+    </div>
+  </div>
+</div>
+{% endblock %}
+
+{% block body %}
+<div class="card">
+  <div class="card-header">
+    <h3 class="card-title">Welcome to Codeigniter</h3>
+  </div>
+  <div class="card-body">
+    <p>
+      The page you are looking at is being generated dynamically by
+      CodeIgniter.
+    </p>
+
+    <p>If you would like to edit this page you'll find it located at:</p>
+    <pre><code>modules/welcome/views/welcome.twig</code></pre>
+
+    <p>The corresponding controller for this page is found at:</p>
+    <pre><code>modules/welcome/controllers/Welcome.php</code></pre>
+
+    <p>
+      If you are exploring CodeIgniter for the very first time, you should
+      start by reading the <a href="//codeigniter.com/userguide3/">User Guide</a>.
+    </p>
+  </div>
+</div>
+{% endblock %}
