--- a/src/views/layouts/partials/dropdown.twig
+++ b/src/views/layouts/partials/dropdown.twig
@@ -9,6 +9,6 @@
     <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
         <a href="#" class="dropdown-item">Settings</a>
         <div class="dropdown-divider"></div>
-        <a href="#" class="dropdown-item">Logout</a>
+        <a href="{{ base_url ('/auth/logout') }}" class="dropdown-item">Logout</a>
     </div>
 </div>
