--- a/src/views/layouts/partials/menu.twig
+++ b/src/views/layouts/partials/menu.twig
@@ -1,5 +1,5 @@
 <li class="nav-item">
-    <a class="nav-link" href="/welcome">
+    <a class="nav-link" href="{{ base_url ('/welcome') }}">
         <span class="nav-link-icon d-md-none d-lg-inline-block">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewbox="0 0 24 24"
                 stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
