refactor(*): change welcome to home

--- a/modules/home/views/home.twig
+++ b/modules/home/views/home.twig
@@ -1,7 +1,7 @@
 {% extends 'layouts/app.twig' %}
 
 {% block title %}
-Welcome
+Home
 {% endblock %}
 
 {% block header %}
@@ -10,11 +10,11 @@ Welcome
     <div class="page-pretitle">
       <ol class="breadcrumb breadcrumb-arrows" aria-label="breadcrumbs">
         <li class="breadcrumb-item"><a href="/">Home</a></li>
-        <li class="breadcrumb-item"><a href="/welcome">Welcome</a></li>
+        <li class="breadcrumb-item"><a href="/home">Home</a></li>
       </ol>
     </div>
     <h2 class="page-title">
-      Welcome
+      Home
     </h2>
   </div>
   <div class="col-auto ms-auto d-print-none">
@@ -36,7 +36,7 @@ Welcome
 {% block body %}
 <div class="card">
   <div class="card-header">
-    <h3 class="card-title">Welcome to Codeigniter</h3>
+    <h3 class="card-title">Home to Codeigniter</h3>
   </div>
   <div class="card-body">
     <p>
@@ -45,10 +45,10 @@ Welcome
     </p>
 
     <p>If you would like to edit this page you'll find it located at:</p>
-    <pre><code>modules/welcome/views/welcome.twig</code></pre>
+    <pre><code>modules/home/views/home.twig</code></pre>
 
     <p>The corresponding controller for this page is found at:</p>
-    <pre><code>modules/welcome/controllers/Welcome.php</code></pre>
+    <pre><code>modules/home/controllers/Home.php</code></pre>
 
     <p>
       If you are exploring CodeIgniter for the very first time, you should
