--- a/src/views/layouts/app.twig
+++ b/src/views/layouts/app.twig
@@ -7,8 +7,8 @@
         {% block title %}{% endblock %}
     </title>
 
-    <link href="{{ base_url ('/css/tabler.min.css')}}" rel="stylesheet" />
-    <link href="{{ base_url ('/css/tabler-vendors.min.css')}}" rel="stylesheet" />
+    <link href="{{ base_url ('/css/app.min.css')}}" rel="stylesheet" />
+    <link href="{{ base_url ('/css/app-vendors.min.css')}}" rel="stylesheet" />
 </head>
 
 <body class="theme-light">
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    <script src="{{ base_url ('/js/tabler.min.js')}}"></script>
+    <script src="{{ base_url ('/js/app.min.js')}}"></script>
 </body>
 
 </html>
