--- a/modules/auth/views/register.twig
+++ b/modules/auth/views/register.twig
@@ -73,7 +73,7 @@ Register
         <label class="form-check">
             {{ form_checkbox ('agree', '1', FALSE, 'class="form-check-input"') }}
             <span class="form-check-label">
-                Agree the <a href="./terms-of-service.html" tabindex="-1"> terms and policy</a>.
+                Agree the <a href="#" tabindex="-1"> terms and policy</a>.
             </span>
         </label>
     </div>
