--- a/modules/auth/views/login.twig
+++ b/modules/auth/views/login.twig
@@ -5,11 +5,9 @@ Login
 {% endblock %}
 
 {% block body %}
-
 {{ form_open ('auth/login', 'class="card card-md"') }}
-
 <div class="card-body">
-    <h2 class="card-title text-center mb-4">Login to your account</h2>
+    <h2 class="card-title text-center mb-4">{{ message ?? 'Login to your account' }}</h2>
     <div class="mb-3">
         <label class="form-label">Email address</label>
         {{ form_input (identity) }}
@@ -17,9 +15,6 @@ Login
     <div class="mb-2">
         <label class="form-label">
             Password
-            <span class="form-label-description">
-                <a href="{{ base_url ('/auth/forgot_password') }}">I forgot password</a>
-            </span>
         </label>
         <div class="input-group input-group-flat">
             {{ form_input (password) }}
