--- a/src/views/layouts/partials/footer.twig
+++ b/src/views/layouts/partials/footer.twig
@@ -1,12 +1,18 @@
-<div class="row text-center align-items-center flex-row-reverse">
-    <div class="col-lg-auto ms-lg-auto">
+<footer class="footer footer-transparent d-print-none">
+  <div class="container-fluid">
+    <div class="row text-center align-items-center flex-row-reverse">
+      <div class="col-lg-auto ms-lg-auto">
         <ul class="list-inline list-inline-dots mb-0">
-            <li class="list-inline-item">v1.0.0-beta</li>
+          <li class="list-inline-item">v1.0.0-beta</li>
         </ul>
-    </div>
-    <div class="col-12 col-lg-auto mt-3 mt-lg-0">
+      </div>
+      <div class="col-12 col-lg-auto mt-3 mt-lg-0">
         <ul class="list-inline list-inline-dots mb-0">
-            <li class="list-inline-item">Page rendered in <strong>{elapsed_time}</strong> seconds</li>
+          <li class="list-inline-item">
+            Page rendered in <strong>{elapsed_time}</strong> seconds
+          </li>
         </ul>
+      </div>
     </div>
-</div>
+  </div>
+</footer>
