change identity to email

--- a/modules/auth/views/login.twig
+++ b/modules/auth/views/login.twig
@@ -16,7 +16,7 @@ Login
 
     <div class="mb-3">
         <label class="form-label">Email address</label>
-        {{ form_input (identity) }}
+        {{ form_input (email) }}
     </div>
     <div class="mb-2">
         <label class="form-label">
