--- a/src/views/layouts/partials/dropdown.twig
+++ b/src/views/layouts/partials/dropdown.twig
@@ -2,8 +2,8 @@
     <a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu">
         <span class="avatar avatar-sm bg-white" style="background-image: url(/img/user-circle.svg)"></span>
         <div class="d-none d-xl-block ps-2">
-            <div>Damas Amirul Karim</div>
-            <div class="mt-1 small text-muted">Web Developer</div>
+            <div> {{ session.user.name ?? '-' }} </div>
+            <div class="mt-1 small text-muted">{{ session.user.email ?? '-' }}</div>
         </div>
     </a>
     <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
