feat(*): add user role

--- a/modules/menu/views/menu.twig
+++ b/modules/menu/views/menu.twig
@@ -1,7 +1,7 @@
 {% extends 'layouts/app.twig' %}
 
 {% block title %}
-Role
+Menu
 {% endblock %}
 
 {% block header %}
@@ -14,7 +14,7 @@ Role
       </ol>
     </div>
     <h2 class="page-title">
-      Role
+      Menu
     </h2>
   </div>
   <div class="col-auto ms-auto d-print-none">
@@ -36,7 +36,7 @@ Role
 {% block body %}
 <div class="card">
   <div class="card-header">
-    <h3 class="card-title">Role</h3>
+    <h3 class="card-title">Menu</h3>
   </div>
   <div class="card-body">
     <p>
@@ -45,7 +45,7 @@ Role
     </p>
 
     <p>If you would like to edit this page you'll find it located at:</p>
-    <pre><code>modules/user/views/role.twig</code></pre>
+    <pre><code>modules/menu/views/menu.twig</code></pre>
 
     <p>
       If you are exploring CodeIgniter for the very first time, you should
