--- a/src/views/layouts/app.twig
+++ b/src/views/layouts/app.twig
@@ -9,6 +9,7 @@
 
     <link href="{{ base_url ('/css/app.min.css')}}" rel="stylesheet" />
     <link href="{{ base_url ('/css/app-vendors.min.css')}}" rel="stylesheet" />
+    <link rel="stylesheet" href="https://unpkg.com/@tabler/icons@latest/iconfont/tabler-icons.min.css">
 </head>
 
 <body class="theme-light">
