--- a/src/views/layouts/partials/sidebar.twig
+++ b/src/views/layouts/partials/sidebar.twig
@@ -22,9 +22,7 @@
             {% include "layouts/partials/dropdown.twig" %}
         </div>
         <div class="navbar-collapse collapse" id="navbar-menu">
-            <ul class="navbar-nav pt-lg-3">
-                {% include "layouts/partials/menu.twig" %}
-            </ul>
+            {{ menu | raw}}
         </div>
     </div>
 </aside>
