change page title

--- a/modules/auth/views/layouts/auth.twig
+++ b/modules/auth/views/layouts/auth.twig
@@ -3,7 +3,7 @@
 		<meta charset="utf-8"/>
 
 		<title>
-			{{ block("title") | default("CODEIGNITER") }}
+			{{ title | default("CODEIGNITER") }}
 		</title>
 
 		<link href="{{ base_url('/css/app.min.css') }}" rel="stylesheet"/>
