--- a/modules/role/views/role.twig
+++ b/modules/role/views/role.twig
@@ -44,20 +44,20 @@
 				</thead>
 				<tbody>
 					{% for role in roles %}
-						<tr>
-							<td class="text-muted">{{ role.id | capitalize }}</td>
-							<td class="text-muted">{{ role.name | capitalize }}</td>
+						<tr id="{{ role.id }}">
+							<td class="text-muted">{{ role.id }}</td>
+							<td class="text-muted">{{ role.name }}</td>
 							<td class="text-muted">{{ role.description }}</td>
 							<td class="text-muted">
-								<a href="#" class="text-primary">
+								<a href="{{ base_url('role') }}/{{role.id}}" class="btn btn-sm text-primary">
 									<i class="ti ti-edit"></i>
 									Edit
 								</a>
 								|
-								<a href="#" class="text-danger">
+								<span class="btn btn-sm text-danger remove">
 									<i class="ti ti-trash"></i>
 									Delete
-								</a>
+								</span>
 							</td>
 						</tr>
 					{% endfor %}
@@ -71,24 +71,28 @@
 			<h2 class="offcanvas-title" id="canvasLabel">Create Role</h2>
 			<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 		</div>
-		{{ form_open ('role') }}
-		<div class="offcanvas-body">
-			<div>
-				<div class="form-group mb-3">
-					<label for="name">Name</label>
-					<input type="text" class="form-control" name="name" id="name" placeholder="Name">
+		<form method="post" id="form">
+			<div class="offcanvas-body">
+				<div>
+					<div class="form-group mb-3">
+						<label for="name">Name</label>
+						<input type="text" class="form-control" name="name" id="name" placeholder="Name">
+					</div>
+					<div class="form-group mb-3">
+						<label for="description">Description</label>
+						<input type="text" class="form-control" name="description" id="description" placeholder="Description">
+					</div>
 				</div>
-				<div class="form-group mb-3">
-					<label for="description">Description</label>
-					<input type="text" class="form-control" name="description" id="description" placeholder="Description">
+				<div class="mt-3">
+					<button id="submit" class="btn btn-primary" type="button" data-bs-dismiss="offcanvas">
+						Submit
+					</button>
 				</div>
 			</div>
-			<div class="mt-3">
-				<button class="btn btn-primary" type="submit" data-bs-dismiss="offcanvas">
-					Submit
-				</button>
-			</div>
-		</div>
-		{{ form_close }}
+		</form>
 	</div>
+{% endblock %}
+
+{% block scripts %}
+	<script src="{{ base_url ('/js/modules/role/role.js')}}"></script>
 {% endblock %}
