--- a/modules/user/views/user.twig
+++ b/modules/user/views/user.twig
@@ -45,21 +45,21 @@
 				</thead>
 				<tbody>
 					{% for user in users %}
-						<tr>
+						<tr id="{{ user.id }}">
 							<td class="text-muted">{{ user.id | capitalize }}</td>
 							<td class="text-muted">{{ user.name }}</td>
 							<td class="text-muted">{{ user.email }}</td>
 							<td class="text-muted">{{ user.role }}</td>
 							<td class="text-muted">
-								<a href="#" class="text-primary">
+								<a href="{{ base_url('user') }}/{{user.id}}" class="btn btn-sm text-primary">
 									<i class="ti ti-edit"></i>
 									Edit
 								</a>
 								|
-								<a href="#" class="text-danger">
+								<span class="btn btn-sm text-danger remove">
 									<i class="ti ti-trash"></i>
 									Delete
-								</a>
+								</span>
 							</td>
 						</tr>
 					{% endfor %}
@@ -73,36 +73,40 @@
 			<h2 class="offcanvas-title" id="canvasLabel">Create User</h2>
 			<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 		</div>
-		{{ form_open ('user') }}
-		<div class="offcanvas-body">
-			<div>
-				<div class="form-group mb-3">
-					<label for="name">Name</label>
-					<input type="text" class="form-control" name="name" id="name" placeholder="Name">
+		<form id="form" method="post">
+			<div class="offcanvas-body">
+				<div>
+					<div class="form-group mb-3">
+						<label for="name">Name</label>
+						<input type="text" class="form-control" name="name" id="name" placeholder="Name">
+					</div>
+					<div class="form-group mb-3">
+						<label for="email">Email</label>
+						<input type="email" class="form-control" name="email" id="email" placeholder="Email">
+					</div>
+					<div class="form-group mb-3">
+						<label for="password">Password</label>
+						<input type="password" class="form-control" name="password" id="password" placeholder="Password">
+					</div>
+					<div class="form-group mb-3">
+						<label for="role">Role</label>
+						<select class="form-select" name="role_id" id="role">
+							{% for role in roles %}
+								<option value="{{role.id}}">{{role.name}}</option>
+							{% endfor %}
+						</select>
+					</div>
 				</div>
-				<div class="form-group mb-3">
-					<label for="email">Email</label>
-					<input type="email" class="form-control" name="email" id="email" placeholder="Email">
-				</div>
-				<div class="form-group mb-3">
-					<label for="password">Password</label>
-					<input type="password" class="form-control" name="password" id="password" placeholder="Password">
-				</div>
-				<div class="form-group mb-3">
-					<label for="role">Role</label>
-					<select class="form-select" name="role_id" id="role">
-						{% for role in roles %}
-							<option value="{{role.id}}">{{role.name}}</option>
-						{% endfor %}
-					</select>
+				<div class="mt-3">
+					<button id="submit" class="btn btn-primary" type="button" data-bs-dismiss="offcanvas">
+						Submit
+					</button>
 				</div>
 			</div>
-			<div class="mt-3">
-				<button class="btn btn-primary" type="submit" data-bs-dismiss="offcanvas">
-					Submit
-				</button>
-			</div>
-		</div>
-		{{ form_close }}
+		</form>
 	</div>
+{% endblock %}
+
+{% block scripts %}
+	<script src="{{ base_url ('/js/modules/user/user.js')}}"></script>
 {% endblock %}
