--- a/src/views/layouts/partials/sidebar.twig
+++ b/src/views/layouts/partials/sidebar.twig
@@ -22,7 +22,7 @@
             {% include "layouts/partials/dropdown.twig" %}
         </div>
         <div class="navbar-collapse collapse" id="navbar-menu">
-            {{ menu | raw}}
+            {{ sidebar | raw}}
         </div>
     </div>
 </aside>
