--- a/modules/home/views/home.twig
+++ b/modules/home/views/home.twig
@@ -6,15 +6,15 @@
 			<div class="page-pretitle">
 				<ol class="breadcrumb breadcrumb-arrows" aria-label="breadcrumbs">
 					<li class="breadcrumb-item">
-						<a href="/">Home</a>
+						<a href="{{ base_url('/') }}">Home</a>
 					</li>
 					<li class="breadcrumb-item">
-						<a href="/home">Home</a>
+						<a href="{{ base_url('/home') }}">Home</a>
 					</li>
 				</ol>
 			</div>
 			<h2 class="page-title">
-				Home
+				{{ title | default('Home') }}
 			</h2>
 		</div>
 		<div class="col-auto ms-auto d-print-none">
@@ -39,8 +39,7 @@
 		</div>
 		<div class="card-body">
 			<p>
-				The page you are looking at is being generated dynamically by
-								      CodeIgniter.
+				The page you are looking at is being generated dynamically by CodeIgniter.
 			</p>
 
 			<p>If you would like to edit this page you'll find it located at:</p>
@@ -50,8 +49,7 @@
 			<pre><code>modules/home/controllers/Home.php</code></pre>
 
 			<p>
-				If you are exploring CodeIgniter for the very first time, you should
-								      start by reading the
+				If you are exploring CodeIgniter for the very first time, you should start by reading the
 				<a href="//codeigniter.com/userguide3/">User Guide</a>.
 			</p>
 		</div>
